traces/bug_227.txt
examples++-load/Element_P2pnc.cpp:178: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_P2pnc.cpp:178:1: initialization of callDoLoadInit
176.       // link with FreeFem++
177.    }
178. > LOADFUNC(finit)
179.   
180.   

examples++-load/Element_P2pnc.cpp:178:1: call to DoLoadInit
176.       // link with FreeFem++
177.    }
178. > LOADFUNC(finit)
179.   
180.   

examples++-load/Element_P2pnc.cpp:178:1: call to addInitFunct
  176.       // link with FreeFem++
  177.    }
  178. > LOADFUNC(finit)
  179.   
  180.   

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
